# sorted-groups

./: CHANGELOG.md  Cargo.toml  README.md  onedoc.toml
.github/workflows/: build.yaml  release-plz.yml
docs/: README_TEMPLATE.md
src/: lib.rs
